@@ -1,5 +1,8 @@
 Changes with APR 0.9.4
 
+  *) Add %pT support to apr_snprintf() for printing an apr_os_thread_t.
+     [Jeff Trawick]
+
   *) Add APR_TCP_NODELAY_INHERITED & APR_O_NONBLOCK_INHERITED to apr.hw
      [Allan Edwards]
 
